@@ -1,3 +1,10 @@
+2019-01-23  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	stk_param_estim_remlgs.m: Make it work for parameter objects too
+
+	* param/estim/stk_param_estim_remlgs.m: Make it work for parameter
+	objects too.
+
 2019-01-22  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	stk_param_estim_optim.m: Add safety nets.
